	PR libstdc++/56112 	* include/bits/hashtable_policy.h (insert(_Pair&&)): Use _M_emplace 	to construct value_type explicitly before trying to extract the key. 	* testsuite/23_containers/unordered_map/cons/56112.cc: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@195520 138bc75d-0d04-0410-961f-82ee72b054a4